--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link rel= "stylesheet" hred="style.css" />
+  <link rel= "stylesheet" href="style.css" />
+  <style>
+    p{
+      text-align: left;
+      background-color:green;
+      color: white;
+      font: "Times New Roman";
+      font-size: 20px;
+    }
+  </style>
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +19,6 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style=" background-color: orange; color: black; font-size: 16px; border-color: orange; ">Inline Method</button>
   </body>
 </html>
