--- a/flex/03-flex-header-2/index.html
+++ b/flex/03-flex-header-2/index.html
@@ -17,10 +17,10 @@
         <li><a href="google.com">link-two</a></li>
         <li><a href="google.com">link-three</a></li>
       </ul>
-      <button class="notifications">
+      <button class="notifications" id="right">
         1 new notification
       </button>
-      <div class="profile-image"></div>
+      <div class="profile-image" id="right"></div>
     </div>
   </body>
 </html>
